--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -11,7 +11,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <ImageButton
             android:id="@+id/menu_btn"
             android:layout_width="40dp"
@@ -19,6 +18,7 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="32dp"
             android:background="@drawable/shape_oval"
+            style="@style/OVAL_SHAPE"
             android:backgroundTint="@color/white"
             android:src="@drawable/icon_menu"
             app:layout_constraintStart_toStartOf="parent"
@@ -30,8 +30,8 @@
             android:layout_height="40dp"
             android:layout_marginStart="12dp"
             android:background="@drawable/shape_oval"
-            android:backgroundTint="@color/white"
             android:elevation="22dp"
+            style="@style/OVAL_SHAPE"
             android:src="@drawable/power_icon"
             app:layout_constraintTop_toTopOf="parent"
             mapbox:layout_constraintBottom_toBottomOf="parent"
@@ -45,7 +45,7 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="15dp"
             android:background="@drawable/shape_oval"
-            android:backgroundTint="@color/white"
+            style="@style/OVAL_SHAPE"
             android:src="@drawable/plus_icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -59,7 +59,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginEnd="15dp"
             android:background="@drawable/shape_oval"
-            android:backgroundTint="@color/white"
+            style="@style/OVAL_SHAPE"
             android:src="@drawable/minus_icon"
             app:layout_constraintEnd_toEndOf="parent"
             mapbox:layout_constraintTop_toBottomOf="@id/increase_zoom_btn" />
@@ -71,7 +71,7 @@
             android:layout_marginTop="25dp"
             android:layout_marginEnd="15dp"
             android:background="@drawable/shape_oval"
-            android:backgroundTint="@color/white"
+            style="@style/OVAL_SHAPE"
             android:src="@drawable/location_icon"
             app:layout_constraintEnd_toEndOf="parent"
             mapbox:layout_constraintTop_toBottomOf="@id/decrease_zoom_btn" />
@@ -105,6 +105,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/shape_busy_container"
+                style="@style/OVAL_SHAPE"
                 android:clickable="true"
                 android:focusable="true"
                 android:fontFamily="@font/roboto_mono"
@@ -114,7 +115,6 @@
                 android:textColor="@color/textColorOfBusyContainer"
                 android:textSize="14sp" />
         </LinearLayout>
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -136,8 +136,7 @@
                     android:id="@+id/exchange_button"
                     android:layout_width="56dp"
                     android:layout_height="56dp"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/shape_oval_with_gradient"
+                    style="@style/BIG_OVAL_SHAPE"
                     android:src="@drawable/ic_exchange"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -161,12 +160,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="@font/roboto_bold"
-                    android:padding="2dp"
                     android:text="Зазказы"
-                    android:textColor="@color/colorOfLikeBlack"
-                    android:textSize="14sp"
+                    style="@style/textStyleBigOval"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/exchange_button" />
@@ -185,8 +180,7 @@
                     android:id="@+id/bordyur_button"
                     android:layout_width="56dp"
                     android:layout_height="56dp"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/shape_oval_with_gradient"
+                    style="@style/BIG_OVAL_SHAPE"
                     android:src="@drawable/ic_rocket"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -195,12 +189,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="@font/roboto_bold"
-                    android:padding="2dp"
+                    style="@style/textStyleBigOval"
                     android:text="Бордюр"
-                    android:textColor="@color/colorOfLikeBlack"
-                    android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/bordyur_button" />
@@ -218,8 +208,7 @@
                     android:id="@+id/plan_button"
                     android:layout_width="56dp"
                     android:layout_height="56dp"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/shape_oval_with_gradient"
+                    style="@style/BIG_OVAL_SHAPE"
                     android:src="@drawable/ic_tarif"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -228,12 +217,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="@font/roboto_bold"
-                    android:padding="2dp"
+                    style="@style/textStyleBigOval"
                     android:text="Тарифы"
-                    android:textColor="@color/colorOfLikeBlack"
-                    android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/plan_button" />
@@ -243,6 +228,7 @@
 
 
         </LinearLayout>
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/notification_container"
@@ -259,7 +245,7 @@
                 android:layout_height="40dp"
                 android:layout_marginTop="4dp"
                 android:background="@drawable/shape_oval"
-                android:backgroundTint="@color/white"
+                style="@style/OVAL_SHAPE"
                 android:src="@drawable/icon_notifications"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
